refactor cleanup into map downloader and add comments

--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,17 @@
----
+# Screeps server settings
 api_host: screeps.com
 api_prefix: /season
 api_token: ${SCREEPS_AUTH_TOKEN}
-api_username: ''
-api_password: ''
+api_username:
+api_password:
 api_secure: true
 
+# Map settings
 map_shard: shardSeason
 map_description: Screeps Season Map
-results_save_file: true
-results_filename: season_map_rawdata.json
-verbose_logging: true
+
+# Save results to file
+save_results_filename: screeps_season_map.json
+
+# Show progress bar
+progress_bar: true
